--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -16,6 +16,7 @@ num-rngs = 3
 # TODO: Make better use of iteration variables
 *.numMasters = ${NM=1}
 *.numSlaves = ${NS=(${NM})*2}
+*.numGround = 0
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
 #
@@ -35,8 +36,9 @@ num-rngs = 3
 #*.nodeMaster[*].hasStatus = false # Lifecycle
 #*.nodeMaster[*].energyStorageType = ""
 #*.nodeMaster[*].energyGeneratorType = ""
-*.nodeMaster[*].numUdpApps = 1
-*.nodeSlave[*].numUdpApps = 1
+*.nodeMaster**.numUdpApps = 1
+*.nodeSlave**.numUdpApps = 1
+*.nodeGround**.numUdpApps = 0
 # TODO: Explore AODV example/code
 
 #
@@ -54,7 +56,7 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
 *.nodeSlave[*].udpApp[0].startTime = 0s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(10ms*(${NM} + 1))
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms*(${NM} + 1))
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -77,7 +79,6 @@ num-rngs = 3
 *.node*[*].wlan[*].typename = "WirelessNic"
 
 # --- MAC
-# TODO: Trim parameters
 *.node*[*].wlan[*].macType = "CubeMacLayer"
 *.node*[*].wlan[*].mac.address = "auto"
 *.node*[*].wlan[*].mac.bitrate = 2Mbps # TODO: What is bitrate inheritence pattern?
@@ -122,14 +123,14 @@ num-rngs = 3
 #
 *.nodeMaster[*].mobilityType = "CircleMobility"
 *.nodeMaster[*].**.cx = 500m
-*.nodeMaster[*].**.cy = 250m
+*.nodeMaster[*].**.cy = 500m
 *.nodeMaster[*].**.cz = 0m
 *.nodeMaster[*].**.r = 100m
 *.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
 
 *.nodeSlave[*].mobilityType = "CircleMobility"
 *.nodeSlave[*].**.cx = 500m
-*.nodeSlave[*].**.cy = 250m
+*.nodeSlave[*].**.cy = 500m
 *.nodeSlave[*].**.cz = 0m
 *.nodeSlave[*].**.r = 150m
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
@@ -164,32 +165,147 @@ extends = OneCluster
 *.nodeMaster[1].udpApp[0].typename = "UDPSink"
 *.nodeMaster[1].udpApp[0].localPort = 5000
 
-#*.nodeMaster[1].udpApp[0].typename = "UDPBasicApp"
-#*.nodeMaster[1].udpApp[0].destAddresses = "nodeMaster[0]"
-#*.nodeMaster[1].udpApp[0].packetName = "UDPDataMaster"
-#*.nodeMaster[1].udpApp[0].destPort = 5000
-#*.nodeMaster[1].udpApp[0].messageLength = exponential(128B)
-#*.nodeMaster[1].udpApp[0].startTime = 0s
-#*.nodeMaster[1].udpApp[0].sendInterval = 100ms*(${NMT} + 1) # One every frame
+*.nodeSlave[..1]**clusterId = ancestorIndex(2)
+*.nodeSlave[2..]**clusterId = (ancestorIndex(2) - ${NMT})
 
-*.nodeSlave[*].udpApp[0].sendInterval = 100ms*(${NM} + 1) # One every frame
-
-*.nodeSlave[0].wlan[*].mac.clusterId = 0 
-*.nodeSlave[1].wlan[*].mac.clusterId = 1
-*.nodeSlave[2].wlan[*].mac.clusterId = 0 
-*.nodeSlave[3].wlan[*].mac.clusterId = 1
-
-*.nodeMaster[0].wlan[*].mac.clusterId = 0 
-*.nodeMaster[1].wlan[*].mac.clusterId = 1 
+*.nodeMaster**clusterId = ancestorIndex(2) 
 
 *.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NMT})
 *.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NMT})) + 10deg
 *.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NMT})) - 10deg
 
+#
+#
+#
+
 [Config TwoClustersMoving]
 extends = TwoClusters
-**nodeMaster**.speed = 10mps
-**nodeSlave**.speed = 15mps
+**nodeMaster**.speed = 1.0mps
+**nodeSlave**.speed = 1.5mps
+
+#
+#
+#
+
+[Config FourClusters]
+# TODO: Seperate ini files
+# Have to redefine and reuse all iteration variables
+extends = OneCluster
+
+*.numMasters = ${NMF=4}
+*.numSlaves = ${NSF=(${NMF})*2}
+*.slavesPerMaster = ${SPMF=(${NSF}/${NMF})}
+
+*.node*[*].wlan[*].mac.numSlots = (${NMF})+1 # +1 for the uplink slot
+*.node*[*].wlan[*].mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
+
+# --- Works with both Master 1 as Sink and App
+#*.nodeMaster[1..].udpApp[0].typename = "UDPSink"
+#*.nodeMaster[1..].udpApp[0].localPort = 5000
+
+*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
+*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
+*.nodeMaster[1..].udpApp[0].destPort = 5000
+*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
+*.nodeMaster[1..].udpApp[0].startTime = 0s
+*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+
+*.node*[*].wlan[*].radio.displayCommunicationRange = false
+*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 75m
+*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 225m
+
+*.nodeSlave[..3]**clusterId = ancestorIndex(2)
+*.nodeSlave[4..]**clusterId = (ancestorIndex(2) - ${NMF})
+
+*.nodeMaster**clusterId = ancestorIndex(2) 
+
+*.nodeMaster[*].**.r = 150m
+*.nodeSlave[*].**.r = 200m
+
+*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NMF})
+*.nodeSlave[..3].**.startAngle = (parentIndex() * (360deg/${NMF})) + 7deg
+*.nodeSlave[4..].**.startAngle = (parentIndex() * (360deg/${NMF})) - 7deg
+
+#
+#
+#
+
+[Config GroundStation]
+extends = FourClusters
+
+*.node**.cz = 1.0m
+*.physicalEnvironment.config = xmldoc("walls.xml")
+*.radioMedium.obstacleLossType = "IdealObstacleLoss"
+
+*.numGround = 1
+
+*.nodeGround**.numUdpApps = 1
+
+*.nodeGround[0].udpApp[0].typename = "UDPSink"
+*.nodeGround[0].udpApp[0].localPort = 5000
+
+# All other nodes sending data
+*.node**udpApp[0].typename = "UDPBasicApp"
+*.node**udpApp[0].destAddresses = "nodeGround[0]"
+*.node**udpApp[0].packetName = "UDPForGround"
+*.node**udpApp[0].destPort = 5000
+*.node**udpApp[0].messageLength = exponential(128B)
+*.node**udpApp[0].startTime = 0s
+*.node**udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+
+# NIC
+*.nodeGround**.typename = "WirelessNic"
+
+# MAC
+*.nodeGround**.macType = "CubeMacLayer"
+*.nodeGround**.mac.address = "auto"
+*.nodeGround**.mac.bitrate = 2Mbps # TODO: What is bitrate inheritence pattern?
+*.nodeGround**.mac.slotDuration = 100ms
+*.nodeGround**.mac.headerLength = 10B
+*.nodeGround**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+
+**.mac.numSlots = (${NMF})+2 # +1 for the uplink slot # +1 for ground (acting like a master)
+
+*.nodeGround**.mac.queueLength = 50 # TODO: Should be some function of slot length and packet generation
+
+*.nodeGround**.mac.slotPadding = 10ms
+*.nodeGround**.mac.startTime = 0s
+*.nodeGround**.mac.timeoutDuration = 20ms
+
+*.nodeGround**.mac.clusterId = 4 # Doesn't have a slot. Shouldn't cause issues? 
+
+**.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
+
+# Radio
+*.nodeGround**.radioType = "IdealRadio"
+**.radio.displayCommunicationRange = true
+
+*.nodeGround**.radio.transmitter.bitrate = 2Mbps
+*.nodeGround**.radio.transmitter.preambleDuration = 0s
+*.nodeGround**.radio.transmitter.headerBitLength = 0b
+*.nodeGround**.radio.transmitter.detectionRange = 999m
+*.nodeGround**.radio.transmitter.interferenceRange = 0m
+*.nodeGround**.radio.transmitter.communicationRange = 300m
+
+*.nodeGround**.radio.receiver.ignoreInterference = true
+
+# Mobility
+*.nodeGround**mobilityType = "StationaryMobility"
+*.nodeGround**initFromDisplayString = false
+*.nodeGround**initialX = 505m
+*.nodeGround**initialY = 460m
+*.nodeGround**initialZ = 1.0m
+#
+#
+#
+
+[Config FourClustersGSMoving]
+extends = GroundStation
+**nodeMaster**.speed = 1.125mps
+**nodeSlave**.speed = 1.5mps
 
 #
 #
