--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -1,55 +1,52 @@
+#								#
+# 			OneCluster			#
+#								#
+
 [Config OneCluster]
-# TODO: Clean up restatement of default values
+# TODO: Seperate ini files
 network = Base
 #sim-time-limit = 500s
 
-#
 # Random Numbers
 #
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
-#
 # Clusters
 #
 # TODO: Make better use of iteration variables
 *.numMasters = ${NM=1}
 *.numSlaves = ${NS=(${NM})*2}
-*.numGround = 0
-*.slavesPerMaster = ${SPM=(${NS}/${NM})}
+*.slavesPerMaster = ${SPM=(${NS}/${NM})} # Dummy parameter
 
-#
 # Medium
 #
 *.radioMediumType = "IdealRadioMedium"
-# ... ... *sigh*
+# Not ideal
 *.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
 *.radioMedium.mediumLimitCache.minInterferenceTime = 999s
 #*.radioMedium.radioModeFilter = true # Do not send to radios which are no in recv or trancv
-*.radioMedium.propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate ...
+*.radioMedium.propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
 *.radioMedium.**.propagationTime = 0s
 
-#
 # Host
+# TODO: Explore AODV example/code
 #
 #*.nodeMaster[*].hasStatus = false # Lifecycle
 #*.nodeMaster[*].energyStorageType = ""
 #*.nodeMaster[*].energyGeneratorType = ""
 *.nodeMaster**.numUdpApps = 1
 *.nodeSlave**.numUdpApps = 1
-*.nodeGround**.numUdpApps = 0
-# TODO: Explore AODV example/code
 
-#
+
 # Application
-#
-# https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPSink.html
 #
 # --- Master 0
 *.nodeMaster[0].udpApp[0].typename = "UDPSink"
 *.nodeMaster[0].udpApp[0].localPort = 5000
 
+# --- Slaves
 *.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
@@ -62,144 +59,94 @@ num-rngs = 3
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
 #*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
 
-#
+
 # Network
 #
 **.networkLayer.arpType = "GlobalARP"
+# --- Basic static routing
 #**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
 #**.configurator.optimizeRoutes = false
 #**.routingTable.netmaskRoutes = ""
-
+# --- AODV adjustments
 #*.node**.forwarding = true # Redundant with AODV
 *.configurator.addStaticRoutes = false # Important for AODV
 
-#
+
 # NIC
-#
-*.node*[*].wlan[*].typename = "WirelessNic"
-
-# --- MAC
-*.node*[*].wlan[*].macType = "CubeMacLayer"
-*.node*[*].wlan[*].mac.address = "auto"
-*.node*[*].wlan[*].mac.bitrate = 2Mbps # TODO: What is bitrate inheritence pattern?
-*.node*[*].wlan[*].mac.slotDuration = 100ms
-*.node*[*].wlan[*].mac.headerLength = 10B
-*.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the uplink slot
-*.node*[*].wlan[*].mac.queueLength = 50 # TODO: Should be some function of slot length and packet generation
-
-*.node*[*].wlan[*].mac.slotPadding = 10ms
-*.node*[*].wlan[*].mac.startTime = 0s
-*.node*[*].wlan[*].mac.timeoutDuration = 20ms
-
-*.nodeSlave[*].wlan[*].mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave[*].wlan[*].mac.clusterId = 0 
-*.nodeMaster[0].wlan[*].mac.clusterId = 0 # Could be used to stop slaves from receiving from masters outside of cluster
-
-*.node*[*].wlan[*].mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
-
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
-
+#
+*.node**.wlan[*].typename = "WirelessNic"
+# --- MAC
+*.node**.macType = "CubeMacLayer"
+*.node**.mac.address = "auto"
+*.node**.mac.bitrate = 2Mbps
+*.node**.mac.slotDuration = 100ms
+*.node**.mac.headerLength = 10B
+*.node**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.node**.mac.numSlots = (${NM})+1 # +1 for the uplink slot
+*.node**.mac.queueLength = 50 
+#*.node**mac.radioModule = "^.radio" # Path to radio module
+# --- Added
+*.node**.mac.startTime = 0s
+*.node**.mac.slotPadding = 10ms
+*.node**.mac.timeoutDuration = 20ms
+# --- --- Cluster configuration
+*.nodeSlave**.mac.isSlave = true # Determines node behaviour mode
+*.nodeSlave**.mac.clusterId = 0 
+*.nodeMaster[0]**.mac.clusterId = 0 # Could be used to stop slaves from receiving from masters outside of cluster
+*.node**.mac.slavesInCluster = ${SPM} # Used to let Master know how many control messages to expect in uplink slot
 # --- Radio
-#
-# https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
-# 
-*.node*[*].wlan[*].radioType = "IdealRadio"
-*.node*[*].wlan[*].radio.displayCommunicationRange = true
+*.node**.radioType = "IdealRadio"
+*.node**.radio.displayCommunicationRange = true
+# --- --- Transmitter / Receiver
+*.node**.radio.transmitter.bitrate = 2Mbps
+*.node**.radio.transmitter.preambleDuration = 0s
+*.node**.radio.transmitter.headerBitLength = 0b
+*.node**.radio.transmitter.detectionRange = 999m
+*.node**.radio.transmitter.interferenceRange = 0m
+*.nodeSlave**.radio.transmitter.communicationRange = 100m
+*.nodeMaster**.radio.transmitter.communicationRange = 235m
+*.node**.radio.receiver.ignoreInterference = true
 
-# --- Radio: Transmitter / Receiver
-*.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
-*.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
-*.node*[*].wlan[*].radio.transmitter.headerBitLength = 0b
-*.node*[*].wlan[*].radio.transmitter.detectionRange = 999m
-*.node*[*].wlan[*].radio.transmitter.interferenceRange = 0m
-*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 100m
-*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 235m
-
-*.node*[*].wlan[*].radio.receiver.ignoreInterference = true
-
-#
 # Mobility
 #
+# --- Masters
 *.nodeMaster[*].mobilityType = "CircleMobility"
-*.nodeMaster[*].**.cx = 500m
-*.nodeMaster[*].**.cy = 500m
-*.nodeMaster[*].**.cz = 0m
-*.nodeMaster[*].**.r = 100m
-*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
-
+*.nodeMaster**.cx = 500m
+*.nodeMaster**.cy = 500m
+*.nodeMaster**.cz = 0m
+*.nodeMaster**.r = 100m
+*.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
+# --- Slaves
 *.nodeSlave[*].mobilityType = "CircleMobility"
-*.nodeSlave[*].**.cx = 500m
-*.nodeSlave[*].**.cy = 500m
-*.nodeSlave[*].**.cz = 0m
-*.nodeSlave[*].**.r = 150m
+*.nodeSlave**.cx = 500m
+*.nodeSlave**.cy = 500m
+*.nodeSlave**.cz = 0m
+*.nodeSlave**.r = 150m
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
 *.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
 
-#
 # Visualization
-#
 # TODO: Examine visualizer documentation
-*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
-*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
-*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
+#
+#*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
+#*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
+#*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
-#
-#
-#
-
-[Config TwoClusters]
-# TODO: Seperate ini files
-# Have to redefine and reuse all iteration variables
-extends = OneCluster
-
-*.numMasters = ${NMT=2}
-*.numSlaves = ${NST=(${NMT})*2}
-*.slavesPerMaster = ${SPMT=(${NST}/${NMT})}
-
-*.node*[*].wlan[*].mac.numSlots = (${NMT})+1 # +1 for the uplink slot
-*.node*[*].wlan[*].mac.slavesInCluster = ${SPMT} # Used to let Master know how many control messages to expect in uplink slot
-
-# --- Works with both Master 1 as Sink and App
-*.nodeMaster[1].udpApp[0].typename = "UDPSink"
-*.nodeMaster[1].udpApp[0].localPort = 5000
-
-*.nodeSlave[..1]**clusterId = ancestorIndex(2)
-*.nodeSlave[2..]**clusterId = (ancestorIndex(2) - ${NMT})
-
-*.nodeMaster**clusterId = ancestorIndex(2) 
-
-*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NMT})
-*.nodeSlave[..1].**.startAngle = (parentIndex() * (360deg/${NMT})) + 10deg
-*.nodeSlave[2..].**.startAngle = (parentIndex() * (360deg/${NMT})) - 10deg
-
-#
-#
-#
-
-[Config TwoClustersMoving]
-extends = TwoClusters
-**nodeMaster**.speed = 1.0mps
-**nodeSlave**.speed = 1.5mps
-
-#
-#
-#
+#									#
+# 			FourClusters			#
+#									#
 
 [Config FourClusters]
-# TODO: Seperate ini files
-# Have to redefine and reuse all iteration variables
+# Must redefine and reuse all iteration variables
 extends = OneCluster
 
 *.numMasters = ${NMF=4}
 *.numSlaves = ${NSF=(${NMF})*2}
-*.slavesPerMaster = ${SPMF=(${NSF}/${NMF})}
+*.slavesPerMaster = ${SPMF=(${NSF}/${NMF})} # Dummy parameter
 
-*.node*[*].wlan[*].mac.numSlots = (${NMF})+1 # +1 for the uplink slot
-*.node*[*].wlan[*].mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
-
-# --- Works with both Master 1 as Sink and App
+# Works with Masters using Sinks and BasicsApps
 #*.nodeMaster[1..].udpApp[0].typename = "UDPSink"
 #*.nodeMaster[1..].udpApp[0].localPort = 5000
 
@@ -209,45 +156,52 @@ extends = OneCluster
 *.nodeMaster[1..].udpApp[0].destPort = 5000
 *.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
 *.nodeMaster[1..].udpApp[0].startTime = 0s
-*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
-
+*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1)) # Exponential proportional to number of slots
+# Slave apps remains effectiviely unaltered
 *.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+
+*.node**.mac.numSlots = (${NMF})+1 # +1 for the uplink slot
+*.node**.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
 
 *.node*[*].wlan[*].radio.displayCommunicationRange = false
 *.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 75m
 *.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 225m
 
+# Just ensure we don't get index of wlan
 *.nodeSlave[..3]**clusterId = ancestorIndex(2)
 *.nodeSlave[4..]**clusterId = (ancestorIndex(2) - ${NMF})
-
 *.nodeMaster**clusterId = ancestorIndex(2) 
 
-*.nodeMaster[*].**.r = 150m
-*.nodeSlave[*].**.r = 200m
+# Larger radii
+*.nodeMaster**.r = 150m
+*.nodeSlave**.r = 200m
 
-*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NMF})
-*.nodeSlave[..3].**.startAngle = (parentIndex() * (360deg/${NMF})) + 7deg
-*.nodeSlave[4..].**.startAngle = (parentIndex() * (360deg/${NMF})) - 7deg
+*.nodeMaster**.startAngle = parentIndex() * (360deg/${NMF})
+*.nodeSlave[..3]**.startAngle = (parentIndex() * (360deg/${NMF})) + 7deg
+*.nodeSlave[4..]**.startAngle = (parentIndex() * (360deg/${NMF})) - 7deg
 
-#
-#
-#
+#									#
+# 			GroundStation			#
+#									#
 
 [Config GroundStation]
 extends = FourClusters
+network = GroundStation
 
+# Need a reasonable height relative to obstacles
 *.node**.cz = 1.0m
+
+# Obstacles
 *.physicalEnvironment.config = xmldoc("walls.xml")
 *.radioMedium.obstacleLossType = "IdealObstacleLoss"
 
 *.numGround = 1
 
 *.nodeGround**.numUdpApps = 1
-
 *.nodeGround[0].udpApp[0].typename = "UDPSink"
 *.nodeGround[0].udpApp[0].localPort = 5000
 
-# All other nodes sending data
+# All orbiting nodes sending data
 *.node**udpApp[0].typename = "UDPBasicApp"
 *.node**udpApp[0].destAddresses = "nodeGround[0]"
 *.node**udpApp[0].packetName = "UDPForGround"
@@ -257,8 +211,8 @@ extends = FourClusters
 *.node**udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
 
 # NIC
+#
 *.nodeGround**.typename = "WirelessNic"
-
 # MAC
 *.nodeGround**.macType = "CubeMacLayer"
 *.nodeGround**.mac.address = "auto"
@@ -266,22 +220,22 @@ extends = FourClusters
 *.nodeGround**.mac.slotDuration = 100ms
 *.nodeGround**.mac.headerLength = 10B
 *.nodeGround**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-
+# Must change for all nodes in network
 **.mac.numSlots = (${NMF})+2 # +1 for the uplink slot # +1 for ground (acting like a master)
 
-*.nodeGround**.mac.queueLength = 50 # TODO: Should be some function of slot length and packet generation
-
+*.nodeGround**.mac.queueLength = 50 
 *.nodeGround**.mac.slotPadding = 10ms
 *.nodeGround**.mac.startTime = 0s
 *.nodeGround**.mac.timeoutDuration = 20ms
 
-*.nodeGround**.mac.clusterId = 4 # Doesn't have a slot. Shouldn't cause issues? 
-
+# Ground has to be able to participate in route negotiation
+# TODO: Investiage differing approaches
+*.nodeGround**.mac.clusterId = 4
 **.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
 
 # Radio
 *.nodeGround**.radioType = "IdealRadio"
-**.radio.displayCommunicationRange = true
+**.radio.displayCommunicationRange = false
 
 *.nodeGround**.radio.transmitter.bitrate = 2Mbps
 *.nodeGround**.radio.transmitter.preambleDuration = 0s
@@ -298,22 +252,45 @@ extends = FourClusters
 *.nodeGround**initialX = 505m
 *.nodeGround**initialY = 460m
 *.nodeGround**initialZ = 1.0m
-#
-#
-#
 
-[Config FourClustersGSMoving]
+#											#
+#			FourClustersGSMoving			#
+#											#
+
+[Config OrbitingGroundStation]
 extends = GroundStation
 **nodeMaster**.speed = 1.125mps
 **nodeSlave**.speed = 1.5mps
 
-#
-#
-#
+#									#
+#			EnergyModelling			#
+#									#
+
+[Config EnergyModelling]
+extends = OrbitingGroundStation
+
+*.node**.energyStorageType = "IdealEnergyStorage"
+*.node**.radio.energyConsumerType = "StateBasedEnergyConsumer"
+
+*.node**.radio.energyConsumer.offPowerConsumption = 0mW
+*.node**.radio.energyConsumer.sleepPowerConsumption = 1mW
+*.node**.radio.energyConsumer.switchingPowerConsumption = 1mW
+
+*.node**.radio.energyConsumer.receiverIdlePowerConsumption = 2mW
+*.node**.radio.energyConsumer.receiverBusyPowerConsumption = 5mW
+*.node**.radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
+
+*.node**.radio.energyConsumer transmitterIdlePowerConsumption = 2mW
+*.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+
+
+#								#
+#			APSKRadio			#
+#								#
 
 # Currently not allowing 'simultaneous' reception
 [Config APSKRadio]
-extends = OneCluster
+extends = EnergyModelling
 
 *.radioMediumType = "APSKScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
@@ -324,41 +301,21 @@ extends = OneCluster
 *.radioMedium.mediumLimitCache.minInterferenceTime = 999s
 
 *.radioMedium.propagationType = "ConstantTimePropagation"
-*.radioMedium.**.propagationTime = 0s
+*.radioMedium**.propagationTime = 0s
 
-*.node*[*].wlan[*].radioType = "APSKScalarRadio" 
+*.node**.radioType = "APSKScalarRadio" 
 
-*.node*[*].wlan[0].radio.carrierFrequency = 2.412GHz 
-*.node*[*].wlan[0].radio.bandwidth = 2MHz 
+*.node**.radio.carrierFrequency = 2.412GHz 
+*.node**.radio.bandwidth = 2MHz 
 
-*.node*[*].wlan[*].radio.transmitter.power = 2mW 
-*.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s 
-*.node*[*].wlan[*].radio.transmitter.headerBitLength = 0b 
-*.node*[*].wlan[*].radio.transmitter.modulation = "BPSK"
+*.node**.radio.transmitter.power = 2mW 
+*.node**.radio.transmitter.preambleDuration = 0s 
+*.node**.radio.transmitter.headerBitLength = 0b 
+*.node**.radio.transmitter.modulation = "BPSK"
 
-*.node*[*].wlan[*].radio.receiver.sensitivity = -85dBm 
-*.node*[*].wlan[*].radio.receiver.energyDetection = -85dBm 
-*.node*[*].wlan[*].radio.receiver.snirThreshold = 4dB 
+*.node**.radio.receiver.sensitivity = -85dBm 
+*.node**.radio.receiver.energyDetection = -85dBm 
+*.node**.radio.receiver.snirThreshold = 4dB
 
-#
-#
-#
-
-[Config EnergyModelling]
-extends = APSKRadio
-
-*.node*[*].energyStorageType = "IdealEnergyStorage"
-*.node*[*].wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
-
-*.node*[*].wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
-*.node*[*].wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
-*.node*[*].wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
-
-*.node*[*].wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
-*.node*[*].wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
-*.node*[*].wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
-
-*.node*[*].wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
-*.node*[*].wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
 
