Small adjustment to MAC queue size, packet generation and packet size parameters.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -1,3 +1,4 @@
+
 #								#
 # 			OneCluster			#
 #								#
@@ -51,9 +52,10 @@ num-rngs = 3
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
-*.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
+*.nodeSlave[*].udpApp[0].messageLength = 128B
 *.nodeSlave[*].udpApp[0].startTime = 0s
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms*(${NM} + 1))
+# TODO: Adjust
+*.nodeSlave[*].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
@@ -62,7 +64,6 @@ num-rngs = 3
 
 # Network
 #
-**.networkLayer.arpType = "GlobalARP"
 # --- Basic static routing
 #**.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
 #**.configurator.optimizeRoutes = false
@@ -84,7 +85,8 @@ num-rngs = 3
 *.node**.mac.headerLength = 10B
 *.node**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node**.mac.numSlots = (${NM})+1 # +1 for the uplink slot
-*.node**.mac.queueLength = 50 
+# TODO: Adjust
+*.node**.mac.queueLength = 100 
 #*.node**mac.radioModule = "^.radio" # Path to radio module
 # --- Added
 *.node**.mac.startTime = 0s
@@ -154,11 +156,12 @@ extends = OneCluster
 *.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
 *.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
 *.nodeMaster[1..].udpApp[0].destPort = 5000
-*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
+*.nodeMaster[1..].udpApp[0].messageLength = 128B
 *.nodeMaster[1..].udpApp[0].startTime = 0s
-*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1)) # Exponential proportional to number of slots
+# TODO: Adjust
+*.nodeMaster[1..].udpApp[0].sendInterval = truncnormal(1s, 0.05s) 
 # Slave apps remains effectiviely unaltered
-*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+*.nodeSlave[*].udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
 *.node**.mac.numSlots = (${NMF})+1 # +1 for the uplink slot
 *.node**.mac.slavesInCluster = ${SPMF} # Used to let Master know how many control messages to expect in uplink slot
@@ -206,9 +209,10 @@ network = GroundStation
 *.node**udpApp[0].destAddresses = "nodeGround[0]"
 *.node**udpApp[0].packetName = "UDPForGround"
 *.node**udpApp[0].destPort = 5000
-*.node**udpApp[0].messageLength = exponential(128B)
+*.node**udpApp[0].messageLength = 128B
 *.node**udpApp[0].startTime = 0s
-*.node**udpApp[0].sendInterval = exponential(100ms*(${NMF} + 1))
+# TODO: Adjust
+*.node**udpApp[0].sendInterval = truncnormal(1s, 0.05s)
 
 # NIC
 #
@@ -222,8 +226,9 @@ network = GroundStation
 *.nodeGround**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 # Must change for all nodes in network
 **.mac.numSlots = (${NMF})+2 # +1 for the uplink slot # +1 for ground (acting like a master)
+# TODO: Adjust
+*.nodeGround**.mac.queueLength = 100 
 
-*.nodeGround**.mac.queueLength = 50 
 *.nodeGround**.mac.slotPadding = 10ms
 *.nodeGround**.mac.startTime = 0s
 *.nodeGround**.mac.timeoutDuration = 20ms
