Adjusted several result parameters. Added MAC access delay vector.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,7 +6,8 @@
 [Config OneCluster]
 # TODO: Seperate ini files
 network = Base
-#sim-time-limit = 500s
+sim-time-limit = 100s
+sim-time-limit.param-record-as-scalar = true # Doesn't seem to work
 
 # Random Numbers
 #
@@ -40,7 +41,6 @@ num-rngs = 3
 *.nodeMaster**.numUdpApps = 1
 *.nodeSlave**.numUdpApps = 1
 
-
 # Application
 #
 # --- Master 0
@@ -61,7 +61,6 @@ num-rngs = 3
 #*.nodeSlave[*].udpApp[0].localAddress = # ""
 #*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
 
-
 # Network
 #
 # --- Basic static routing
@@ -70,8 +69,7 @@ num-rngs = 3
 #**.routingTable.netmaskRoutes = ""
 # --- AODV adjustments
 #*.node**.forwarding = true # Redundant with AODV
-*.configurator.addStaticRoutes = false # Important for AODV
-
+*.configurator.addStaticRoutes = false
 
 # NIC
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
@@ -127,6 +125,17 @@ num-rngs = 3
 *.nodeSlave**.r = 150m
 *.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
 *.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg
+
+# Results
+# TODO: Check defaults
+# 
+**.statistic-recording = true
+**.scalar-recording = true
+**.vector-recording = true
+**.result-recording-modes = all
+
+# Hopefully will allow grouping of results by cluster
+**.mac.clusterId.param-record-as-scalar = true # Doesn't seem to work
 
 # Visualization
 # TODO: Examine visualizer documentation
@@ -285,7 +294,7 @@ extends = OrbitingGroundStation
 *.node**.radio.energyConsumer.receiverBusyPowerConsumption = 5mW
 *.node**.radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
 
-*.node**.radio.energyConsumer transmitterIdlePowerConsumption = 2mW
+*.node**.radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
 *.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
 
